--- a/pom.xml
+++ b/pom.xml
@@ -287,13 +287,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                    <dependencies>
+<!--                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.surefire</groupId>
                             <artifactId>surefire-junit47</artifactId>
                             <version>${maven-surefire-plugin.version}</version>
                         </dependency>
-                    </dependencies>
+                    </dependencies> -->
                     <configuration>
                         <argLine>-Duser.language=en -Duser.region=US</argLine>
                         <includes>
